# $Id$

INCLUDES =								\
	$(GTK_CFLAGS) 							\
	-DPACKAGE_LOCALE_DIR=\"$(localedir)\"

helper_dialogdir = $(libexecdir)/xfce4/xfwm4

helper_dialog_PROGRAMS =							\
	helper-dialog

helper_dialog_SOURCES =							\
	helper-dialog.c

helper_dialog_CFLAGS =								\
	$(GTK_CFLAGS)

helper_dialog_LDADD =								\
	$(GTK_LIBS)

