SUBDIRS =								\
	16x16								\
	22x22								\
	24x24								\
	32x32								\
	48x48								\
	64x64								\
	96x96								\
	128x128							\
	scalable

EXTRA_DIST = \
	meson.build \
	$(NULL)

# install-data-local:
# 	@echo "Updating Gtk icon cache."
# 	gtk-update-icon-cache -f -t $(datadir)/icons/hicolor/
